crates/azalea-core/src/parse/snapshots/azalea_core__parse__parser_tests__invalid_identifier-2.snap
---
source: crates/azalea-core/src/parse/parser_tests.rs
expression: output
---
SOURCE:
#1abcdef

ERROR:
Error: Expected an expression
  1 > | #1abcdef
    ^
Hint: Identifiers cannot start with a special character
